--- a/Curs8 MVC/Views/Evaluation/_LayoutNou.cshtml
+++ b/Curs8 MVC/Views/Evaluation/_LayoutNou.cshtml
@@ -9,6 +9,8 @@
 
 </head>
 <body>
+    @RenderSection("test", required: false)
+
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
@@ -33,12 +35,13 @@
         @RenderBody()
         <hr />
         <footer>
-            <p> @DateTime.Now - Original </p>
+            <p> @DateTime.Now - Sdira Razvan </p>
         </footer>
     </div>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+
 </body>
 </html>
