--- a/Curs8 MVC/Views/Evaluation/Edit.cshtml
+++ b/Curs8 MVC/Views/Evaluation/Edit.cshtml
@@ -31,13 +31,13 @@
             </div>
         </div>
 
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.country, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.country, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.country, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
             @Html.LabelFor(model => model.rating, htmlAttributes: new { @class = "control-label col-md-2" })
