--- a/Curs8 MVC/Views/Evaluation/_Projects.cshtml
+++ b/Curs8 MVC/Views/Evaluation/_Projects.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model Curs8_MVC.Models.ProjectEvaluation
+
+@{
     ViewBag.Title = "Home Page";
 }
 
@@ -6,7 +8,7 @@
     <h1>ASP.NET</h1>
     <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
     <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-    
+
     <ul class="nav navbar-nav">
         <li>@Html.ActionLink("Evaluation", "Index", "Evaluation")</li>
 
