--- a/Curs8 MVC/Views/Shared/_Layout.cshtml
+++ b/Curs8 MVC/Views/Shared/_Layout.cshtml
@@ -40,5 +40,6 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+    @Scripts.Render("~/bundles/pm");
 </body>
 </html>
